<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.category.update_category.UpdateCategoryFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/product_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:hint="@string/product_name"
        android:lineSpacingExtra="3sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="16dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/price"
        android:lineSpacingExtra="3sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="16dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/image_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/image_url"
        android:lineSpacingExtra="3sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="16dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@+id/price_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/product_description"
        android:lineSpacingExtra="3sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="16dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@+id/image_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/company_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/company"
        android:lineSpacingExtra="3sp"
        android:textSize="18sp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

    <TextView
        android:id="@+id/category_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/category"
        android:lineSpacingExtra="3sp"
        android:textSize="18sp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_dropdown" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_product"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:text="@string/save_changes"
        android:textSize="15sp"
        app:cornerRadius="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_dropdown" />

</androidx.constraintlayout.widget.ConstraintLayout>