<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/add_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/add_product"
                android:lineSpacingExtra="3sp"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:hint="@string/product_name"
                android:lineSpacingExtra="3sp"
                android:paddingStart="16dp"
                android:paddingBottom="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:hint="@string/price"
                android:inputType="number"
                android:lineSpacingExtra="3sp"
                android:paddingStart="16dp"
                android:paddingBottom="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name_edit_text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:hint="@string/product_description"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="3sp"
                android:paddingStart="16dp"
                android:paddingBottom="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_edit_text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:hint="@string/image_url"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="3sp"
                android:paddingStart="16dp"
                android:paddingBottom="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

            <TextView
                android:id="@+id/company_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/company"
                android:lineSpacingExtra="3sp"
                android:textSize="18sp"
                android:background="@android:drawable/btn_dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_url_edit_text" />

            <TextView
                android:id="@+id/category_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/category"
                android:lineSpacingExtra="3sp"
                android:textSize="18sp"
                android:background="@android:drawable/btn_dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_dropdown" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_product"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginTop="30dp"
                android:text="@string/save_changes"
                android:textSize="15sp"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_dropdown" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>